# sego-Forge

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  MODULES.md  SETUP.md
rust/: Cargo.toml
rust/crates/forge-api/: Cargo.toml
rust/crates/forge-api/src/: client.rs  lib.rs
rust/crates/forge-cli/: Cargo.toml
rust/crates/forge-cli/src/: main.rs
rust/crates/forge-cli/src/commands/: init.rs  run.rs  status.rs
rust/crates/forge-core/: Cargo.toml
rust/crates/forge-core/src/: error.rs  lib.rs  model.rs  workflow.rs
src/: __init__.py  cli.py  core.py
tests/: test_core.py
