[package]
name = "forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
