[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { path = "../forge-core" }
forge-api = { path = "../forge-api" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
